--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "cssnano": "^5.1.15",
     "eslint": "^8.36.0",
     "eslint-config-next": "^13.2.4",
+    "framer-motion": "^10.3.2",
     "next": "^13.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-intersection-observer": "^9.4.3",
     "typescript": "^4.9.5"
   },
   "devDependencies": {
