--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@dotlottie/player-component": "^1.3.2",
     "@lottiefiles/react-lottie-player": "^3.5.2",
+    "@netlify/plugin-nextjs": "4.29.5-appdir.0",
     "@types/node": "^18.15.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
@@ -28,6 +29,7 @@
     "typewriter-effect": "^2.19.0"
   },
   "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.4.2",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
