--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@dotlottie/player-component": "^1.3.2",
     "@lottiefiles/react-lottie-player": "^3.5.2",
-    "@netlify/plugin-nextjs": "4.32.2",
+    "@netlify/plugin-nextjs": "4.29.5-appdir.0",
     "@types/node": "^18.15.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
