--- a/package.json
+++ b/package.json
@@ -9,17 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.10",
     "@dotlottie/player-component": "^1.3.2",
     "@lottiefiles/react-lottie-player": "^3.5.2",
     "@netlify/plugin-nextjs": "4.29.5-appdir.0",
     "@types/node": "^18.15.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "contentful": "^9.3.5",
     "cssnano": "^5.1.15",
     "eslint": "^8.36.0",
     "eslint-config-next": "^13.2.4",
     "framer-motion": "^10.3.2",
+    "graphql": "^16.6.0",
     "next": "^13.2.4",
+    "next-sanity": "^4.1.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
