--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^18.15.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@vercel/analytics": "^0.1.11",
     "contentful": "^9.3.5",
     "cssnano": "^5.1.15",
     "eslint": "^8.36.0",
