--- a/package.json
+++ b/package.json
@@ -13,9 +13,6 @@
     "@dotlottie/player-component": "^1.3.2",
     "@lottiefiles/react-lottie-player": "^3.5.2",
     "@netlify/plugin-nextjs": "4.29.5-appdir.0",
-    "@types/node": "^18.15.0",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
     "@vercel/analytics": "^0.1.11",
     "contentful": "^9.3.5",
     "cssnano": "^5.1.15",
@@ -25,6 +22,7 @@
     "graphql": "^16.6.0",
     "next": "^13.2.4",
     "next-sanity": "^4.1.5",
+    "nodemailer": "^6.9.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
@@ -37,6 +35,9 @@
     "@tailwindcss/line-clamp": "^0.4.2",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.7"
+    "tailwindcss": "^3.2.7",
+    "@types/node": "^18.15.0",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11"
   }
 }
