--- a/package.json
+++ b/package.json
@@ -1,41 +1,39 @@
 {
-  "name": "my-app",
+  "name": "next-keystone",
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "keystone:dev": "keystone dev",
+    "keystone:build": "keystone build",
+    "keystone:start": "keystone start",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "keystone postinstall"
   },
   "dependencies": {
-    "@dotlottie/player-component": "^1.3.2",
-    "@lottiefiles/react-lottie-player": "^3.5.2",
-    "@vercel/analytics": "^0.1.11",
-    "contentful": "^ 9.3.5",
-    "cssnano": "^5.1.15",
-    "eslint": "^8.36.0",
-    "eslint-config-next": "^13.2.4",
-    "framer-motion": "^10.3.2",
-    "graphql": "^16.6.0",
-    "next": "^13.2.4",
-    "next-sanity": "^4.1.5",
-    "nodemailer": "^6.9.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.8.0",
-    "react-intersection-observer": "^9.4.3",
-    "react-tilt": "^0.1.4",
-    "typescript": "^4.9.5",
-    "typewriter-effect": "^2.19.0"
+    "@cosmicjs/sdk": "^1.0.10",
+    "@keystone-6/core": "^5.5.1",
+    "@keystone-6/fields-document": "^8.0.1",
+    "@prisma/client": "^5.2.0",
+    "@types/node": "20.5.9",
+    "@types/react": "18.2.21",
+    "@types/react-dom": "18.2.7",
+    "autoprefixer": "10.4.15",
+    "eslint": "^8.49.0",
+    "eslint-config-next": "13.5.2",
+    "framer-motion": "^10.16.4",
+    "next": "13.5.2",
+    "postcss": "8.4.29",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-icons": "^4.11.0",
+    "tailwindcss": "3.3.3",
+    "typescript": "5.2.2",
+    "typewriter-effect": "^2.20.1"
   },
   "devDependencies": {
-    "@tailwindcss/line-clamp": "^0.4.2",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.7",
-    "@types/node": "^18.15.0",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11"
+    "prisma": "5.0.0"
   }
 }
